<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020 Gwyn Bong Xiao Min.
  ~ All rights reserved.
  ~ Last Modified 6/8/20 12:54 PM
  -->

<android.support.wearable.view.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/today_ep_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_box="left|bottom|right"
    app:rectLayout="@layout/rect_activity_exercise_plan_details"
    app:roundLayout="@layout/round_activity_exercise_plan_details"
    tools:context="nyp.edu.sg.pamatewear.ExercisePlanDetailsActivity"
    tools:deviceIds="wear">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_box="all">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_timer_black_24dp"
                    android:contentDescription="" />

                <TextView
                    android:id="@+id/tvPlanDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/plan_duration"
                    android:textColor="#fff"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_heart" />

                <TextView
                    android:id="@+id/tvPlanHeart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/plan_heart_rate"
                    android:textColor="#fff"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_foot" />

                <TextView
                    android:id="@+id/tvPlanSteps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/plan_steps"
                    android:textColor="#fff"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_fire" />

                <TextView
                    android:id="@+id/tvPlanCalories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/plan_calories"
                    android:textColor="#fff"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_distance" />

                <TextView
                    android:id="@+id/tvPlanDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/plan_distance"
                    android:textColor="#fff"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/btnStartExercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="START EXERCISE"
                android:textColor="#35B7FF"/>
        </LinearLayout>
    </ScrollView>
</android.support.wearable.view.BoxInsetLayout>
