<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020 Gwyn Bong Xiao Min.
  ~ All rights reserved.
  ~ Last Modified 6/8/20 12:54 PM
  -->

<android.support.wearable.view.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/watch_view_stub"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:rectLayout="@layout/rect_activity_measure_exercise"
    app:roundLayout="@layout/round_activity_record_exercise"
    tools:context="nyp.edu.sg.pamatewear.RecordExerciseActivity"
    tools:deviceIds="wear">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_box="all">

        <RelativeLayout
            android:id="@+id/layout_recording"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/tvPlanName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/record_plan_name"
                android:textAlignment="center"
                android:textColor="#028CD8"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvRecordValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPlanName"
                android:gravity="center"
                android:text="@string/record_value"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/layout_sensor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/layout_record"
                android:layout_below="@+id/tvRecordValue"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/ic_heart" />

                <TextView
                    android:id="@+id/tvRecordingHeart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recording_heart_rate"
                    android:textColor="#fff"
                    android:textStyle="bold" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="15dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:background="#fff" />

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/ic_foot" />

                <TextView
                    android:id="@+id/tvREcordingSteps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recording_step_count"
                    android:textColor="#fff"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_record"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imgBtnPauseRecord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:clickable="false"
                    android:src="@drawable/ic_pause_circle_outline_black_24dp" />

                <ImageButton
                    android:id="@+id/imgBtnPlayRecord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:src="@drawable/ic_play_circle_outline_black_24dp" />

                <ImageButton
                    android:id="@+id/imgBtnStopRecord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:clickable="false"
                    android:src="@drawable/ic_stop_black_24dp" />
            </LinearLayout>
        </RelativeLayout>
    </FrameLayout>
</android.support.wearable.view.BoxInsetLayout>
